@@ -87,6 +87,10 @@
     <h6 id="h6_id" class="h6_class" name="h6_name">h6's are cool</h6>
 
     <a href="success.html" target="_blank">New Window</a>
+    
+    <input type="text" id="onfocus_text_field" onfocus="document.getElementById('onfocus_test').innerHTML = 'changed by onfocus event'"/>
+    <div id="onfocus_test"></div>
+
   </body>
 </html>
 
