@@ -2,6 +2,7 @@
 * Enhancements
   * Added ability to find Checkbox by :value
   * Added ability to find HiddenField by :value
+  * Added #fire_event method to Element
 
 === Version 0.5.4 / 2011-12-18
 * Enhancements
